Updated NB01 with new environment syntax

--- a/code/01-hello-world/NB01-hello-world.ipynb
+++ b/code/01-hello-world/NB01-hello-world.ipynb
@@ -40,25 +40,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+ . /tools/emu/pathfinder-sw/set-lucata-beta-env.sh\r\n",
-      "++ LUCATA_TOOLCHAIN_BASE=/tools/lucata/pathfinder-sw\r\n",
-      "++ LUCATA_VERSION=22.09-beta\r\n",
-      "++ export LUCATA_TOOLCHAIN_DIR=/tools/lucata/pathfinder-sw/22.09-beta\r\n",
-      "++ LUCATA_TOOLCHAIN_DIR=/tools/lucata/pathfinder-sw/22.09-beta\r\n",
-      "++ export PATH=/tools/lucata/pathfinder-sw/22.09-beta/bin:/opt/slurm/current/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/nethome/seswar3/.local/bin:/nethome/seswar3/bin\r\n",
-      "++ PATH=/tools/lucata/pathfinder-sw/22.09-beta/bin:/opt/slurm/current/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/nethome/seswar3/.local/bin:/nethome/seswar3/bin\r\n",
-      "++ export LD_LIBRARY_PATH=/tools/lucata/pathfinder-sw/22.09-beta/lib:/opt/slurm/current/lib:\r\n",
-      "++ LD_LIBRARY_PATH=/tools/lucata/pathfinder-sw/22.09-beta/lib:/opt/slurm/current/lib:\r\n",
-      "++ export LD_LIBRARY_PATH=/tools/lucata/pathfinder-sw/22.09-beta/lib:/opt/slurm/current/lib::/usr/lib/x86_64-linux-gnu/\r\n",
-      "++ LD_LIBRARY_PATH=/tools/lucata/pathfinder-sw/22.09-beta/lib:/opt/slurm/current/lib::/usr/lib/x86_64-linux-gnu/\r\n",
-      "++ echo 'Lucata tools are added to current path from /tools/lucata/pathfinder-sw/22.09-beta'\r\n",
-      "Lucata tools are added to current path from /tools/lucata/pathfinder-sw/22.09-beta\r\n",
+      "+ . ../.env\r\n",
+      "++ LUCATA_VERSION=22.02\r\n",
+      "++ export LUCATA_BASE=/tools/lucata/pathfinder-sw/22.02\r\n",
+      "++ LUCATA_BASE=/tools/lucata/pathfinder-sw/22.02\r\n",
+      "++ PATH=/tools/lucata/pathfinder-sw/22.02/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin\r\n",
+      "++ LD_LIBRARY_PATH=/tools/lucata/pathfinder-sw/22.02/lib:/usr/lib64:/usr/lib/x86_64-linux-gnu/\r\n",
+      "++ USER=\r\n",
+      "++ echo 'Lucata tools are added to current path from /tools/lucata/pathfinder-sw/22.02'\r\n",
+      "Lucata tools are added to current path from /tools/lucata/pathfinder-sw/22.02\r\n",
       "+ set +x\r\n"
      ]
     }
    ],
    "source": [
-    "!set -x;. /tools/emu/pathfinder-sw/set-lucata-beta-env.sh; set +x"
+    "#This command shows how to set up your environment for command-line execution by sourcing the .env file.  \n",
+    "#The ! indicates that this is a BASH command, and `set -x` prints out verbose output from the execution  \n",
+    "\n",
+    "!set -x;. ../.env; set +x"
    ]
   },
   {
@@ -76,18 +75,20 @@
    "source": [
     "import os\n",
     "\n",
+    "#Set the path to the latest toolset \n",
+    "LUCATA_BASE=\"/tools/emu/pathfinder-sw/22.09-beta\" \n",
+    "\n",
     "#Get the path to where all code samples are\n",
     "os.environ[\"USER_NOTEBOOK_CODE\"]=os.path.dirname(os.getcwd())\n",
-    "os.environ[\"PATH\"]=os.pathsep.join([\"/tools/emu/pathfinder-sw/22.09-beta/bin\",os.environ[\"PATH\"]])\n",
-    "os.environ[\"FLAGS\"]=\"-I/tools/lucata/pathfinder-sw/22.09-beta/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.09-beta/lib -lmemoryweb\"\n",
-    "os.environ[\"LUCATA_BASE\"]=\"/tools/emu/pathfinder-sw/22.09-beta/\""
+    "os.environ[\"PATH\"]=os.pathsep.join([os.path.join(LUCATA_BASE,\"bin\"),os.environ[\"PATH\"]])\n",
+    "os.environ[\"FLAGS\"]=\"-I\"+LUCATA_BASE+\"/include/\"+\" -L\"+LUCATA_BASE+\"/lib -lmemoryweb\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check the variables."
+    "Check the environment variables we set."
    ]
   },
   {
@@ -99,19 +100,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/nethome/seswar3/hpec_tutorial/lucata-pathfinder-tutorial/code\n",
-      "/tools/emu/pathfinder-sw/22.09-beta/bin/emu-cc\n",
-      "Lucata compilation flags are -I/tools/lucata/pathfinder-sw/22.09-beta/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.09-beta/lib -lmemoryweb\n"
+      "Your notebook code folder is at: /nethome/jyoung9/lucata-pathfinder-tutorial/code\n",
+      "\n",
+      "Execution path is at: /tools/emu/pathfinder-sw/22.09-beta/bin:/nethome/jyoung9/.cargo/bin:/opt/slurm/current/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/nethome/jyoung9/.local/bin:/nethome/jyoung9/bin\n",
+      "\n",
+      "Lucata compilation flags are '-I/tools/emu/pathfinder-sw/22.09-beta/include/ -L/tools/emu/pathfinder-sw/22.09-beta/lib -lmemoryweb'\n",
+      "\n",
+      "Using the Lucata compiler, emu-cc, located at: /tools/emu/pathfinder-sw/22.09-beta/bin/emu-cc\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "echo $USER_NOTEBOOK_CODE\n",
-    "#Print out which Emu compiler, emu-cc, we are using\n",
-    "which emu-cc\n",
+    "printf \"Your notebook code folder is at: $USER_NOTEBOOK_CODE\\n\\n\"\n",
+    "\n",
+    "printf \"Execution path is at: $PATH\\n\\n\"\n",
+    "\n",
     "#Print out the compiler flags we need to use the Lucata memoryweb headers and library\n",
-    "echo \"Lucata compilation flags are $FLAGS\""
+    "printf \"Lucata compilation flags are '$FLAGS'\\n\\n\"\n",
+    "\n",
+    "#Print out which Lucata compiler, emu-cc, we are using\n",
+    "printf \"Using the Lucata compiler, emu-cc, located at: \"\n",
+    "which emu-cc\n"
    ]
   },
   {
@@ -196,6 +206,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "hello-world.mwx\n",
       "hello-world-naive.mwx\n"
      ]
     }
@@ -215,11 +226,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Sun Sep 18 16:46:55 2022\n",
+      "Start untimed simulation with local date and time= Tue Sep 20 10:42:54 2022\n",
       "\n",
       "Timed simulation starting...\n",
       "Hello, world!\n",
-      "End untimed simulation with local date and time= Sun Sep 18 16:46:58 2022\n",
+      "End untimed simulation with local date and time= Tue Sep 20 10:42:57 2022\n",
       "\n",
       "\n",
       "Info: /OSCI/SystemC: Simulation stopped by user.\n"
@@ -333,11 +344,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Sun Sep 18 16:47:00 2022\n",
+      "Start untimed simulation with local date and time= Tue Sep 20 10:43:00 2022\n",
       "\n",
       "Timed simulation starting...\n",
       "Hello, world!\n",
-      "End untimed simulation with local date and time= Sun Sep 18 16:47:03 2022\n",
+      "End untimed simulation with local date and time= Tue Sep 20 10:43:03 2022\n",
       "\n",
       "\n",
       "Info: /OSCI/SystemC: Simulation stopped by user.\n"
@@ -421,11 +432,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Sun Sep 18 16:47:06 2022\n",
+      "Start untimed simulation with local date and time= Tue Sep 20 10:43:06 2022\n",
       "\n",
       "Timed simulation starting...\n",
       "Hello, world!\n",
-      "End untimed simulation with local date and time= Sun Sep 18 16:47:30 2022\n",
+      "End untimed simulation with local date and time= Tue Sep 20 10:43:31 2022\n",
       "\n",
       "\n",
       "Info: /OSCI/SystemC: Simulation stopped by user.\n",
@@ -518,7 +529,7 @@
       "\tand last occurred @58091968 ps with prog 12.6% complete\n",
       "************************************************\n",
       "************************************************\n",
-      "Simulator wall clock time (seconds): 24\n"
+      "Simulator wall clock time (seconds): 25\n"
      ]
     }
    ],
@@ -570,7 +581,7 @@
       "23c23\n",
       "< Simulator wall clock time (seconds): 3\n",
       "---\n",
-      "> Simulator wall clock time (seconds): 24\n"
+      "> Simulator wall clock time (seconds): 25\n"
      ]
     }
    ],
