add section on visualization

--- a/code/02-saxpy-basics/NB02-saxpy-basics.ipynb
+++ b/code/02-saxpy-basics/NB02-saxpy-basics.ipynb
@@ -282,6 +282,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Visualization\n",
+    "\n",
+    "As we learned in Notebook 1.1, we can use `emusim_profile` to generate a number of charts to help us understand the performance of the profiled regions. Below is an example of how to do that for the last example, `saxpy-1d-replicated`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "emusim_profile saxpy-profile $SIMFLAGS -- saxpy-1d-replicated.mwx 8 128 5.0 2>/dev/null"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The output for the above simulation is summarized in the file [saxpy-profile/saxpy-1d-replicated.html](saxpy-profile/saxpy-1d-replicated-report.html). Note that some plots will not be generated when running with fewer than 2 nodes (set in `$SIMFLAGS`)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Postcript\n",
     "Here we have investigated several different strategies for spawning threads and allocatin data with the Pathfinder's distributed layout. \n",
     "\n",
