--- a/code/01-hello-world/NB01-hello-world.ipynb
+++ b/code/01-hello-world/NB01-hello-world.ipynb
@@ -41,14 +41,14 @@
      "output_type": "stream",
      "text": [
       "+ . ../.env\r\n",
-      "++ LUCATA_VERSION=22.02\r\n",
-      "++ export LUCATA_BASE=/tools/lucata/pathfinder-sw/22.02\r\n",
-      "++ LUCATA_BASE=/tools/lucata/pathfinder-sw/22.02\r\n",
-      "++ PATH=/tools/lucata/pathfinder-sw/22.02/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin\r\n",
-      "++ LD_LIBRARY_PATH=/tools/lucata/pathfinder-sw/22.02/lib:/usr/lib64:/usr/lib/x86_64-linux-gnu/\r\n",
+      "++ LUCATA_VERSION=22.09-beta\r\n",
+      "++ export LUCATA_BASE=/tools/lucata/pathfinder-sw/22.09-beta\r\n",
+      "++ LUCATA_BASE=/tools/lucata/pathfinder-sw/22.09-beta\r\n",
+      "++ PATH=/tools/lucata/pathfinder-sw/22.09-beta/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin\r\n",
+      "++ LD_LIBRARY_PATH=/tools/lucata/pathfinder-sw/22.09-beta/lib:/usr/lib64:/usr/lib/x86_64-linux-gnu/\r\n",
       "++ USER=\r\n",
-      "++ echo 'Lucata tools are added to current path from /tools/lucata/pathfinder-sw/22.02'\r\n",
-      "Lucata tools are added to current path from /tools/lucata/pathfinder-sw/22.02\r\n",
+      "++ echo 'Lucata tools are added to current path from /tools/lucata/pathfinder-sw/22.09-beta'\r\n",
+      "Lucata tools are added to current path from /tools/lucata/pathfinder-sw/22.09-beta\r\n",
       "+ set +x\r\n"
      ]
     }
@@ -100,7 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your notebook code folder is at: /nethome/jyoung9/lucata-pathfinder-tutorial/code\n",
+      "Your notebook code folder is at: /nethome/jyoung9/tutorials/lucata-pathfinder-tutorial/code\n",
       "\n",
       "Execution path is at: /tools/emu/pathfinder-sw/22.09-beta/bin:/nethome/jyoung9/.cargo/bin:/opt/slurm/current/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/nethome/jyoung9/.local/bin:/nethome/jyoung9/bin\n",
       "\n",
@@ -206,7 +206,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello-world.mwx\n",
       "hello-world-naive.mwx\n"
      ]
     }
@@ -226,11 +225,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Tue Sep 20 10:42:54 2022\n",
+      "Start untimed simulation with local date and time= Wed Sep 21 20:57:02 2022\n",
       "\n",
       "Timed simulation starting...\n",
       "Hello, world!\n",
-      "End untimed simulation with local date and time= Tue Sep 20 10:42:57 2022\n",
+      "End untimed simulation with local date and time= Wed Sep 21 20:57:06 2022\n",
       "\n",
       "\n",
       "Info: /OSCI/SystemC: Simulation stopped by user.\n"
@@ -344,11 +343,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Tue Sep 20 10:43:00 2022\n",
+      "Start untimed simulation with local date and time= Wed Sep 21 20:57:08 2022\n",
       "\n",
       "Timed simulation starting...\n",
       "Hello, world!\n",
-      "End untimed simulation with local date and time= Tue Sep 20 10:43:03 2022\n",
+      "End untimed simulation with local date and time= Wed Sep 21 20:57:12 2022\n",
       "\n",
       "\n",
       "Info: /OSCI/SystemC: Simulation stopped by user.\n"
@@ -432,11 +431,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Tue Sep 20 10:43:06 2022\n",
+      "Start untimed simulation with local date and time= Wed Sep 21 20:57:15 2022\n",
       "\n",
       "Timed simulation starting...\n",
       "Hello, world!\n",
-      "End untimed simulation with local date and time= Tue Sep 20 10:43:31 2022\n",
+      "End untimed simulation with local date and time= Wed Sep 21 20:57:39 2022\n",
       "\n",
       "\n",
       "Info: /OSCI/SystemC: Simulation stopped by user.\n",
@@ -522,14 +521,14 @@
       "GC Clusters per Node=3\n",
       "GCs per Cluster=8\n",
       "************************************************\n",
-      "Emu system run time 0.000667 sec==666720000 ps\n",
+      "Emu system run time 0.000661 sec==661164000 ps\n",
       "System thread counts:\n",
       "\tactive=0, created=14, died=14,\n",
-      "\tmax live=3 first occurred @58091968 ps with prog 8.71% complete\n",
-      "\tand last occurred @58091968 ps with prog 12.6% complete\n",
+      "\tmax live=3 first occurred @58180848 ps with prog 8.8% complete\n",
+      "\tand last occurred @58180848 ps with prog 12.7% complete\n",
       "************************************************\n",
       "************************************************\n",
-      "Simulator wall clock time (seconds): 25\n"
+      "Simulator wall clock time (seconds): 24\n"
      ]
     }
    ],
@@ -567,21 +566,21 @@
       "> Number of Nodes=4\n",
       "> Total Memory (in MiB)=64\n",
       "16c16\n",
-      "< Emu system run time 0.000606 sec==605604000 ps\n",
+      "< Emu system run time 0.0006 sec==600048000 ps\n",
       "---\n",
-      "> Emu system run time 0.000667 sec==666720000 ps\n",
+      "> Emu system run time 0.000661 sec==661164000 ps\n",
       "18,20c18,20\n",
       "< \tactive=0, created=0, died=0,\n",
       "< \tmax live=0 first occurred @0 s with prog 0% complete\n",
       "< \tand last occurred @0 s with prog 0% complete\n",
       "---\n",
       "> \tactive=0, created=14, died=14,\n",
-      "> \tmax live=3 first occurred @58091968 ps with prog 8.71% complete\n",
-      "> \tand last occurred @58091968 ps with prog 12.6% complete\n",
+      "> \tmax live=3 first occurred @58180848 ps with prog 8.8% complete\n",
+      "> \tand last occurred @58180848 ps with prog 12.7% complete\n",
       "23c23\n",
-      "< Simulator wall clock time (seconds): 3\n",
+      "< Simulator wall clock time (seconds): 4\n",
       "---\n",
-      "> Simulator wall clock time (seconds): 25\n"
+      "> Simulator wall clock time (seconds): 24\n"
      ]
     }
    ],
@@ -595,25 +594,16 @@
    "metadata": {},
    "source": [
     "### Cleanup  \n",
-    "Finally we can clean up our code directory and the output files using the included Makefile in this directory."
+    "Finally we can clean up our code directory and the output files using the included Makefile in this directory. Uncomment this line to clean the working directory."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rm -f *.mwx *.tqd *.cdc *.vsf *.mps *.uis *.csv *.hpc; \\\r\n",
-      "./helpers/backup_imgs.sh\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!make clean"
+    "#!make clean"
    ]
   },
   {
