Updated NB2,3,4 PDFs; renamed NB5

--- a/code/03-saxpy-basics/NB03-saxpy-basics.ipynb
+++ b/code/03-saxpy-basics/NB03-saxpy-basics.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook #2 - Programming Basics with SAXPY"
+    "# Lucata Cilk Programming Basics with SAXPY"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "source": [
     "First we set environment variables to point to the user's notebook code and to the Lucata tools. \n",
     "\n",
-    "We'll also set SIMFLAGS to simulate 16 MiB of memory on 1 node for each simulation. "
+    "We'll also set SIMFLAGS to simulate 16 MiB of memory on 4 simulated nodes for each simulation. "
    ]
   },
   {
@@ -32,15 +32,14 @@
     "os.environ[\"USER_NOTEBOOK_CODE\"]=os.path.dirname(os.getcwd())\n",
     "os.environ[\"PATH\"]=os.pathsep.join([os.path.join(LUCATA_BASE,\"bin\"),os.environ[\"PATH\"]])\n",
     "os.environ[\"CCFLAGS\"]=\"-I\"+LUCATA_BASE+\"/include/\"+\" -L\"+LUCATA_BASE+\"/lib -lmemoryweb\"\n",
-    "#os.environ[\"SIMFLAGS\"]=\"-m 24 --total_nodes 1 --output_instruction_count --capture_timing_queues\"\n",
-    "os.environ[\"SIMFLAGS\"]=\"-m 24 --total_nodes 1\""
+    "os.environ[\"SIMFLAGS\"]=\"-m 24 --total_nodes 4\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook goes along with the [Lucata programming basics slides](https://github.com/gt-crnch-rg/pearc-tutorial-2021/blob/main/slides/lucata_tutorial/01_Lucata_Pathfinder_Tutorial_Basics.pdf), so please follow along with the slides for a supplemental resource. \n",
+    "This notebook goes along with the Lucata programming basics slides, so please follow along with the slides for a supplemental resource. \n",
     "\n",
     "## SAXPY with Cilk Spawn\n",
     "\n",
@@ -266,10 +265,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Wed Sep 21 10:58:42 2022\n",
+      "Start untimed simulation with local date and time= Wed Sep 21 21:33:45 2022\n",
       "\n",
       "Timed simulation starting...\n",
-      "End untimed simulation with local date and time= Wed Sep 21 10:58:43 2022\n",
+      "End untimed simulation with local date and time= Wed Sep 21 21:33:49 2022\n",
       "\n",
       "\n",
       "Info: /OSCI/SystemC: Simulation stopped by user.\n",
@@ -293,14 +292,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Wed Sep 21 10:58:43 2022\n",
+      "Start untimed simulation with local date and time= Wed Sep 21 21:33:50 2022\n",
       "\n",
       "Timed simulation starting...\n",
-      "End untimed simulation with local date and time= Wed Sep 21 10:58:44 2022\n",
+      "End untimed simulation with local date and time= Wed Sep 21 21:33:56 2022\n",
       "\n",
       "\n",
       "Info: /OSCI/SystemC: Simulation stopped by user.\n",
-      "Emu system run time 0.000167 sec==166680000 ps\n"
+      "Emu system run time 0.000172 sec==172236000 ps\n"
      ]
     }
    ],
@@ -508,14 +507,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Wed Sep 21 10:58:51 2022\n",
+      "Start untimed simulation with local date and time= Wed Sep 21 21:34:03 2022\n",
       "\n",
       "Timed simulation starting...\n",
-      "End untimed simulation with local date and time= Wed Sep 21 10:58:52 2022\n",
+      "End untimed simulation with local date and time= Wed Sep 21 21:34:08 2022\n",
       "\n",
       "\n",
       "Info: /OSCI/SystemC: Simulation stopped by user.\n",
-      "Emu system run time 0.000117 sec==116676000 ps\n"
+      "Emu system run time 0.000122 sec==122232000 ps\n"
      ]
     }
    ],
@@ -745,14 +744,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Wed Sep 21 10:58:58 2022\n",
+      "Start untimed simulation with local date and time= Wed Sep 21 21:34:14 2022\n",
       "\n",
       "Timed simulation starting...\n",
-      "End untimed simulation with local date and time= Wed Sep 21 10:58:59 2022\n",
+      "End untimed simulation with local date and time= Wed Sep 21 21:34:21 2022\n",
       "\n",
       "\n",
       "Info: /OSCI/SystemC: Simulation stopped by user.\n",
-      "Emu system run time 0.000161 sec==161124000 ps\n"
+      "Emu system run time 0.000194 sec==194460000 ps\n"
      ]
     }
    ],
@@ -985,14 +984,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Wed Sep 21 10:59:05 2022\n",
+      "Start untimed simulation with local date and time= Wed Sep 21 21:34:28 2022\n",
       "\n",
       "Timed simulation starting...\n",
-      "End untimed simulation with local date and time= Wed Sep 21 10:59:06 2022\n",
+      "End untimed simulation with local date and time= Wed Sep 21 21:34:35 2022\n",
       "\n",
       "\n",
       "Info: /OSCI/SystemC: Simulation stopped by user.\n",
-      "Emu system run time 0.000167 sec==166680000 ps\n"
+      "Emu system run time 0.0002 sec==200016000 ps\n"
      ]
     }
    ],
@@ -1225,14 +1224,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Wed Sep 21 10:59:10 2022\n",
+      "Start untimed simulation with local date and time= Wed Sep 21 21:34:40 2022\n",
       "\n",
       "Timed simulation starting...\n",
-      "End untimed simulation with local date and time= Wed Sep 21 10:59:13 2022\n",
+      "End untimed simulation with local date and time= Wed Sep 21 21:35:00 2022\n",
       "\n",
       "\n",
       "Info: /OSCI/SystemC: Simulation stopped by user.\n",
-      "Emu system run time 0.000467 sec==466704000 ps\n"
+      "Emu system run time 0.000539 sec==538932000 ps\n"
      ]
     }
    ],
@@ -1468,14 +1467,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Wed Sep 21 10:59:17 2022\n",
+      "Start untimed simulation with local date and time= Wed Sep 21 21:35:06 2022\n",
       "\n",
       "Timed simulation starting...\n",
-      "End untimed simulation with local date and time= Wed Sep 21 10:59:20 2022\n",
+      "End untimed simulation with local date and time= Wed Sep 21 21:35:49 2022\n",
       "\n",
       "\n",
       "Info: /OSCI/SystemC: Simulation stopped by user.\n",
-      "Emu system run time 0.000467 sec==466704000 ps\n"
+      "Emu system run time 0.00113 sec==1133424000 ps\n"
      ]
     }
    ],
@@ -1711,14 +1710,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Wed Sep 21 10:59:26 2022\n",
+      "Start untimed simulation with local date and time= Wed Sep 21 21:35:55 2022\n",
       "\n",
       "Timed simulation starting...\n",
-      "End untimed simulation with local date and time= Wed Sep 21 10:59:27 2022\n",
+      "End untimed simulation with local date and time= Wed Sep 21 21:36:02 2022\n",
       "\n",
       "\n",
       "Info: /OSCI/SystemC: Simulation stopped by user.\n",
-      "Emu system run time 0.000167 sec==166680000 ps\n"
+      "Emu system run time 0.000194 sec==194460000 ps\n"
      ]
     }
    ],
@@ -1753,12 +1752,12 @@
      "output_type": "stream",
      "text": [
       "Generating profile in saxpy-profile/saxpy-1d-replicated\n",
-      "emusim.x  -m 24 --total_nodes 1\n",
+      "emusim.x  -m 24 --total_nodes 4\n",
       "saxpy-1d-replicated.mwx 8 128 5.0\n",
-      "Start untimed simulation with local date and time= Wed Sep 21 10:59:27 2022\n",
+      "Start untimed simulation with local date and time= Wed Sep 21 21:36:03 2022\n",
       "\n",
       "Timed simulation starting...\n",
-      "End untimed simulation with local date and time= Wed Sep 21 10:59:28 2022\n",
+      "End untimed simulation with local date and time= Wed Sep 21 21:36:10 2022\n",
       "\n",
       "\n",
       "Info: /OSCI/SystemC: Simulation stopped by user.\n",
@@ -1770,9 +1769,11 @@
       "Generating saxpy-profile/saxpy-1d-replicated.Atomic_Transaction_Map.png\n",
       "Generating saxpy-profile/saxpy-1d-replicated.Remote_Transaction_Map.png\n",
       "Generating saxpy-profile/saxpy-1d-replicated.MSP_Activity.png\n",
+      "Generating saxpy-profile/saxpy-1d-replicated.SRIO_Outgoing_Activity.png\n",
+      "Generating saxpy-profile/saxpy-1d-replicated.SRIO_Incoming_Activity.png\n",
       "Generating saxpy-profile/saxpy-1d-replicated.Live_Threads.png\n",
       "saxpy-profile/saxpy-1d-replicated.hpc exists\n",
-      "Find all graphs in: saxpy-profile/saxpy-1d-replicated_21-09-2022_10:59:41\n",
+      "Find all graphs in: saxpy-profile/saxpy-1d-replicated_21-09-2022_21:36:31\n",
       "The last hpc call to analyze will be 0\n",
       "Program called lu_profile_perfcntr with message: STOP COUNTERS\n",
       "Generating Graphs for [STOP COUNTERS]...\n",
