--- a/code/04-saxpy-workflow/NB04-saxpy-workflow.ipynb
+++ b/code/04-saxpy-workflow/NB04-saxpy-workflow.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook #3 - Pathfinder Workflow with SAXPY"
+    "# Pathfinder Workflow with SAXPY"
    ]
   },
   {
@@ -358,8 +358,8 @@
      "output_type": "stream",
      "text": [
       "Makefile\n",
-      "NB03-saxpy-workflow.ipynb\n",
       "NB03-saxpy-workflow.pdf\n",
+      "NB04-saxpy-workflow.ipynb\n",
       "saxpy-1d-workflow.c\n",
       "saxpy-1d-workflow.cdc\n",
       "saxpy-1d-workflow.mwx\n",
@@ -412,9 +412,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "real\t0m0.023s\n",
-      "user\t0m0.015s\n",
-      "sys\t0m0.005s\n"
+      "real\t0m0.024s\n",
+      "user\t0m0.013s\n",
+      "sys\t0m0.007s\n"
      ]
     }
    ],
@@ -451,8 +451,8 @@
      "text": [
       "\n",
       "real\t0m0.020s\n",
-      "user\t0m0.011s\n",
-      "sys\t0m0.007s\n"
+      "user\t0m0.008s\n",
+      "sys\t0m0.010s\n"
      ]
     }
    ],
@@ -497,10 +497,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Tue Sep 20 13:07:47 2022\n",
+      "Start untimed simulation with local date and time= Wed Sep 21 21:38:52 2022\n",
       "\n",
       "SAXPY complete!\n",
-      "End untimed simulation with local date and time= Tue Sep 20 13:07:47 2022\n",
+      "End untimed simulation with local date and time= Wed Sep 21 21:38:52 2022\n",
       "\n"
      ]
     },
@@ -538,10 +538,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Tue Sep 20 13:07:47 2022\n",
+      "Start untimed simulation with local date and time= Wed Sep 21 21:38:53 2022\n",
       "\n",
       "SAXPY complete!\n",
-      "End untimed simulation with local date and time= Tue Sep 20 13:07:47 2022\n",
+      "End untimed simulation with local date and time= Wed Sep 21 21:38:53 2022\n",
       "\n"
      ]
     },
@@ -594,10 +594,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Submitted batch job 134217816 on cluster pathfinder\n",
+      "Submitted batch job 134217827 on cluster pathfinder\n",
       "\n",
       "Showing Slurm output files:\n",
-      "slurm-134217816.out\n",
+      "slurm-134217827.out\n",
       "\n",
       "Output from the run:\n",
       "SAXPY complete!\n"
@@ -656,7 +656,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Submitted batch job 134217817 on cluster pathfinder\n",
+      "Submitted batch job 134217828 on cluster pathfinder\n",
       "\n",
       "Output from the run:\n",
       "SAXPY complete!\n"
@@ -713,144 +713,49 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>PARTITION</th>\n",
-       "      <th>CLUSTER</th>\n",
-       "      <th>AVAIL</th>\n",
-       "      <th>TIMELIMIT</th>\n",
-       "      <th>NODES</th>\n",
-       "      <th>STATE</th>\n",
-       "      <th>NODELIST</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>CLUSTER:</th>\n",
+       "      <th>pathfinder</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>rg-pathfinder*</td>\n",
-       "      <td>pathfind</td>\n",
-       "      <td>up</td>\n",
-       "      <td>180-00:00:</td>\n",
-       "      <td>1</td>\n",
+       "      <th>PARTITION</th>\n",
+       "      <th>AVAIL</th>\n",
+       "      <th>TIMELIMIT</th>\n",
+       "      <th>NODES</th>\n",
+       "      <td>STATE</td>\n",
+       "      <td>NODELIST</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">rg-pathfinder*</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">up</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">180-00:00:</th>\n",
+       "      <th>1</th>\n",
        "      <td>alloc</td>\n",
        "      <td>c2n1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>rg-pathfinder*</td>\n",
-       "      <td>pathfind</td>\n",
-       "      <td>up</td>\n",
-       "      <td>180-00:00:</td>\n",
-       "      <td>31</td>\n",
+       "      <th>31</th>\n",
        "      <td>idle</td>\n",
        "      <td>c0n[0-7],c1n[0-7],c2n[0,2-7],c3n[0-7]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>rg-arm-debug*</td>\n",
-       "      <td>cluster</td>\n",
-       "      <td>up</td>\n",
-       "      <td>4:00:00</td>\n",
-       "      <td>4</td>\n",
-       "      <td>idle</td>\n",
-       "      <td>octavius[1-4]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>rg-arm-long</td>\n",
-       "      <td>cluster</td>\n",
-       "      <td>up</td>\n",
-       "      <td>12:00:00</td>\n",
-       "      <td>16</td>\n",
-       "      <td>idle</td>\n",
-       "      <td>octavius[1-16]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>rg-gpu</td>\n",
-       "      <td>cluster</td>\n",
-       "      <td>up</td>\n",
-       "      <td>12:00:00</td>\n",
-       "      <td>7</td>\n",
-       "      <td>idle</td>\n",
-       "      <td>frozone[1-4],instinct,quorra[1-2]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>rg-hpc</td>\n",
-       "      <td>cluster</td>\n",
-       "      <td>up</td>\n",
-       "      <td>12:00:00</td>\n",
-       "      <td>3</td>\n",
-       "      <td>idle</td>\n",
-       "      <td>flubber[8-10]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>rg-intel-fpga-hw</td>\n",
-       "      <td>cluster</td>\n",
-       "      <td>up</td>\n",
-       "      <td>12:00:00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>idle</td>\n",
-       "      <td>flubber[2-3]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>rg-xilinx-fpga-hw</td>\n",
-       "      <td>cluster</td>\n",
-       "      <td>up</td>\n",
-       "      <td>12:00:00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>idle</td>\n",
-       "      <td>flubber[4-5]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>rg-smart-nic</td>\n",
-       "      <td>cluster</td>\n",
-       "      <td>up</td>\n",
-       "      <td>12:00:00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>idle</td>\n",
-       "      <td>flubber[6-7]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>notebook</td>\n",
-       "      <td>cluster</td>\n",
-       "      <td>up</td>\n",
-       "      <td>12:00:00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>mix</td>\n",
-       "      <td>hawksbill</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           PARTITION   CLUSTER AVAIL   TIMELIMIT  NODES  STATE  \\\n",
-       "0     rg-pathfinder*  pathfind    up  180-00:00:      1  alloc   \n",
-       "1     rg-pathfinder*  pathfind    up  180-00:00:     31   idle   \n",
-       "2      rg-arm-debug*   cluster    up     4:00:00      4   idle   \n",
-       "3        rg-arm-long   cluster    up    12:00:00     16   idle   \n",
-       "4             rg-gpu   cluster    up    12:00:00      7   idle   \n",
-       "5             rg-hpc   cluster    up    12:00:00      3   idle   \n",
-       "6   rg-intel-fpga-hw   cluster    up    12:00:00      2   idle   \n",
-       "7  rg-xilinx-fpga-hw   cluster    up    12:00:00      2   idle   \n",
-       "8       rg-smart-nic   cluster    up    12:00:00      2   idle   \n",
-       "9           notebook   cluster    up    12:00:00      1    mix   \n",
+       "                                      CLUSTER:  \\\n",
+       "PARTITION      AVAIL TIMELIMIT  NODES    STATE   \n",
+       "rg-pathfinder* up    180-00:00: 1        alloc   \n",
+       "                                31        idle   \n",
        "\n",
-       "                                NODELIST  \n",
-       "0                                   c2n1  \n",
-       "1  c0n[0-7],c1n[0-7],c2n[0,2-7],c3n[0-7]  \n",
-       "2                          octavius[1-4]  \n",
-       "3                         octavius[1-16]  \n",
-       "4      frozone[1-4],instinct,quorra[1-2]  \n",
-       "5                          flubber[8-10]  \n",
-       "6                           flubber[2-3]  \n",
-       "7                           flubber[4-5]  \n",
-       "8                           flubber[6-7]  \n",
-       "9                              hawksbill  "
+       "                                                                  pathfinder  \n",
+       "PARTITION      AVAIL TIMELIMIT  NODES                               NODELIST  \n",
+       "rg-pathfinder* up    180-00:00: 1                                       c2n1  \n",
+       "                                31     c0n[0-7],c1n[0-7],c2n[0,2-7],c3n[0-7]  "
       ]
      },
      "execution_count": 11,
@@ -859,8 +764,8 @@
     }
    ],
    "source": [
-    "#Show the real-time status of all the CRNCH queues including the Pathfinder.\n",
-    "%sinfo --federation"
+    "#Show the real-time status of the Pathfinder nodes.\n",
+    "%sinfo --federation -M pathfinder"
    ]
   },
   {
