--- a/code/06-graphblas/NB06-graphblas.ipynb
+++ b/code/06-graphblas/NB06-graphblas.ipynb
@@ -113,11 +113,14 @@
     "#### Depth Variation\n",
     "\n",
     "*Personal* view, not common usage:\n",
-    "- Sometimes you'll encounter algorithms that modify the adjacency matrix to force what appear to be self-loops (adding the identity matrix).\n",
-    "- In my experience, these often are not quite adjacency matrices but a slight variation.  \n",
+    "\n",
+    "Sometimes you'll encounter algorithms that modify the adjacency matrix to force what appear to be self-loops (adding the identity matrix).\n",
+    "\n",
+    "In my experience, these often are not quite adjacency matrices but a slight variation.  \n",
     "- The matrix entries encode which vertices can be *reached* in at most a fixed number of edge traversals.  \n",
     "- The plain identity becomes the edges in at most zero hops.  \n",
-    "- Adjacency plus identity: In two hops.  $A^k$: $k$ hops, used *e.g.* when computing the transitive closure."
+    "- Adjacency plus identity: In two hops.\n",
+    "- $A^k$: $k$ hops, used *e.g.* when computing the transitive closure."
    ]
   },
   {
@@ -131,13 +134,13 @@
    "source": [
     "### Incidence Matrices\n",
     "\n",
-    "Perhaps the most general and not often seen.\n",
+    "Perhaps the most general and not often seen in code.\n",
     "- Rows (typically) represent vertices and columns **edges**.\n",
     "- Then two vertices $i$ an $j$ connected by edge $e$ are denoted by $a_{ie} = a_{je} = 1$ for an undirected graph.\n",
-    "- Directed graphs use signed edges.  \n",
+    "- Directed graphs use signed entries.  \n",
     "- *Hypergraphs* have more than two entries in a column denoting that *all* the marked vertices are in the same hyperedge.\n",
     "\n",
-    "This is terribly flexible.  Other forms can be computed by interpretations of $A A^{T}$ (adjacency), $A^T A$ (line graph), and more.\n",
+    "This is terribly flexible.  Other forms can be computed by interpretations of $A A^{T}$ (adjacency), $A^T A$ (line graph / dual), and more.\n",
     "\n",
     "Incidence matrices appear in mathematic programming (linear optimizaton) formulations, non-backtracking walks, and algorithms in increasing levels of generality and complexity."
    ]
@@ -153,10 +156,11 @@
    "source": [
     "### Pitfalls in Sparse Matrix Representations\n",
     "\n",
-    "Although the fit between entries in a sparse matrix and edges in a graph appears natural at first, the results often have been hacky:.\n",
+    "Although the fit between entries in a sparse matrix and edges in a graph appears natural at first, the results often have been hacky:\n",
     "- Sparse matrices assume zero is the additive identity.\n",
     "- GNU Octave / MATLAB (TM) try not to store explicit zeros.\n",
-    "- But a graph either has an edge or does not.  The value is separate.\n",
+    "\n",
+    "But a graph either has an edge or does not.  The value is separate.  Often takes some mental adjustment.\n",
     "\n",
     "And nomenclature...  Try to use *vertices* rather than *nodes.*  The latter is confusing when combining with distributed-memory parallelism."
    ]
@@ -174,7 +178,7 @@
     "\n",
     "### GraphBLAS objects\n",
     "- `GrB_Matrix`\n",
-    "- `GrB_Vector` (really a vertex set with values)\n",
+    "- `GrB_Vector` (a vertex set with values)\n",
     "- *masks*, an interpretation of the above\n",
     "- `GrB_Scalar` (in v2.0, `GxB_Scalar` prior)\n",
     "- Unary operators, binary operators\n",
@@ -233,6 +237,9 @@
     "### Anatomy of a GraphBLAS C Call\n",
     "\n",
     "``` C\n",
+    "GrB_Info GrB_Matrix_new(GrB_Matrix *, GrB_Type, \n",
+    "                        GrB_Index nrows, GrB_Index ncols);\n",
+    "\n",
     "GrB_Info GrB_eWiseAdd(GrB_Vector w /* output */,\n",
     "    const GrB_Vector mask,\n",
     "    const GrB_BinaryOp accum,\n",
@@ -242,7 +249,7 @@
     "    const GrB_Descriptor desc);\n",
     "```\n",
     "\n",
-    "*Generaly* users are encouraged to stick to a similar style."
+    "*Generally* users are encouraged to stick to a similar style."
    ]
   },
   {
