--- a/code/06-graphblas/NB06-graphblas.ipynb
+++ b/code/06-graphblas/NB06-graphblas.ipynb
@@ -1738,6 +1738,18 @@
     "- [RedisGraph: property graphs built on GraphBLAS](https://redis.io/docs/stack/graph/)\n",
     "- [GBTL: work towards a C++ interface and implementation](https://github.com/cmu-sei/gbtl/)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07885e08",
+   "metadata": {},
+   "source": [
+    "## Addendum: More Pitfalls\n",
+    "\n",
+    "The HPEC GraphBLAS BoF on 20 Sep 2022 has a talk from John Gilbert on \"What did the GraphBLAS get wrong?\"\n",
+    "- [slides](https://docs.google.com/presentation/d/1Py8s_6XZo7USTN79K_m-Ls4XpABo0sblFZgKJ3FPoIg/edit#slide=id.p)\n",
+    "- [wider survey responses](https://docs.google.com/document/d/1fMmm-Bmew0wpgJRrjyMHy6G-zPq6R6kQlRum560_4S0/edit)\n"
+   ]
   }
  ],
  "metadata": {
